<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp" >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/txt_no_access"
        android:textColor="@color/white"
        android:textSize="100sp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/txt_color"
            style="@style/DefaultTextView"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtTextColor"
            android:text="@string/txt_hex"
            style="@style/DefaultEditText"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/bg_color"
            style="@style/DefaultTextView"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtBgColor"
            android:text="@string/txt_hex"
            style="@style/DefaultEditText"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/btn_text"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>